--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       </div>
     </main>
 
-    <div class="error"> <p>This website will only work on mobile device and big screen device only.</p></div>
+    <div class="error"> <p>This website will only work on big screen device.</p></div>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script
